# esp32-weight

./: README.md  sdkconfig  sdkconfig.github  sdkconfig.old
.github/workflows/: build.yml
docs/: BTHOME_INTEGRATION.md  BTHOME_SETUP_GUIDE.md  CHANGES_SUMMARY.md  MIGRATION_GUIDE.md  SENSOR_SYSTEM.md  bthome_sensor_integration_example.c  data_flow.txt  sensor_display_preview.html
main/: CMakeLists.txt  Kconfig.projbuild  bthome_observer.c  bthome_observer.h  http_server.c  http_server.h  idf_component.yml  main.c  metrics.c  metrics.h  mqtt_publisher.c  ota.c  ota.h  pump.c  pump.h  sensors.c  sensors.h  settings.c  settings.h  syslog.c  syslog.h  temperature.c  temperature.h  weight.c  weight.h  wifi.c  wifi.h
